maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:12: error: not found: value pickUpBaggle
  pickUpBaggle;
  ^